# ragas-gui

./: .gitignore  AGENTS.md  README.md  app.py  models.txt  pyproject.toml  requirements.txt  sample_data.json  start.sh
.streamlit/: config.toml
src/ragas_gui/: __init__.py  config.py  data.py  evaluation.py  i18n.py  llm_config.py  telemetry.py
tests/: test_data.py
tests/features/: data_validation.feature  llm_configuration.feature  metric_configuration.feature  telemetry.feature
tests/step_defs/: test_data_validation.py  test_llm_configuration.py  test_metric_configuration.py  test_telemetry.py
