[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragas-gui"
version = "0.1.0"
description = "Streamlit-based evaluation UI for Ragas RAG pipelines"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "ragas",
    "streamlit",
    "pandas",
    "plotly",
    "openai",
    "datasets",
    "nest_asyncio",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
